vac-rs/crates/surfaces/tui/src/history_cell/snapshots/vac_tui__history_cell__tests__active_mcp_tool_call_snapshot.snap
---
source: crates/surfaces/tui/src/history_cell/split_006_finalmessageseparator.rs.inc
assertion_line: 1064
expression: rendered
---
• Calling search.find_docs({"query":"ratatui styling","limit":3})
