vac-rs/crates/surfaces/tui/src/history_cell/snapshots/vac_tui__history_cell__tests__coalesced_reads_dedupe_names.snap
---
source: crates/surfaces/tui/src/history_cell/split_006_finalmessageseparator.rs.inc
assertion_line: 1594
expression: rendered
---
• Explored
  └ Read auth.rs, shimmer.rs
