vac-rs/crates/surfaces/tui/src/history_cell/snapshots/vac_tui__history_cell__tests__coalesces_reads_across_multiple_calls.snap
---
source: crates/surfaces/tui/src/history_cell/split_006_finalmessageseparator.rs.inc
assertion_line: 1557
expression: rendered
---
• Explored
  └ Search shimmer_spans
    Read shimmer.rs, status_indicator_widget.rs
