vac-rs/crates/surfaces/tui/src/history_cell/snapshots/vac_tui__history_cell__tests__coalesces_sequential_reads_within_one_call.snap
---
source: crates/surfaces/tui/src/history_cell/split_006_finalmessageseparator.rs.inc
assertion_line: 1500
expression: rendered
---
• Explored
  └ Search shimmer_spans
    Read shimmer.rs
    Read status_indicator_widget.rs
