vac-rs/crates/surfaces/tui/src/history_cell/snapshots/vac_tui__history_cell__tests__completed_mcp_tool_call_multiple_outputs_inline_snapshot.snap
---
source: crates/surfaces/tui/src/history_cell/split_006_finalmessageseparator.rs.inc
assertion_line: 1349
expression: rendered
---
• Called metrics.summary({"metric":"trace.latency","window":"15m"})
  └ Latency summary: p50=120ms, p95=480ms.
    No anomalies detected.
