vac-rs/crates/surfaces/tui/src/history_cell/snapshots/vac_tui__history_cell__tests__completed_mcp_tool_call_multiple_outputs_snapshot.snap
---
source: crates/surfaces/tui/src/history_cell/split_006_finalmessageseparator.rs.inc
assertion_line: 1278
expression: rendered
---
• Called
  └ search.find_docs({"query":"ratatui
        styling","limit":3})
    Found styling guidance in styles.md and
        additional notes in CONTRIBUTING.md.
    link: file:///docs/styles.md
