vac-rs/crates/surfaces/tui/src/history_cell/snapshots/vac_tui__history_cell__tests__cyber_policy_error_event_snapshot.snap
---
source: crates/surfaces/tui/src/history_cell/split_006_finalmessageseparator.rs.inc
assertion_line: 573
expression: rendered
---
ⓘ This chat was flagged for possible cybersecurity risk
  If this seems wrong, try rephrasing your request. To get authorized for
  security work, join the Trusted Access for Cyber program.
  legacy-chatgpt-cyber-verify-disabled
