vac-rs/crates/surfaces/tui/src/history_cell/snapshots/vac_tui__history_cell__tests__error_event_oversized_input_snapshot.snap
---
source: crates/surfaces/tui/src/history_cell/split_006_finalmessageseparator.rs.inc
assertion_line: 629
expression: rendered
---
■ Message exceeds the maximum length of 1048576 characters (1048577 provided).
